# ndarray

./: .editorconfig  .gitignore  .gitlint  AGENTS.md  CMakeLists.txt  CMakePresets.json  Doxyfile.in  flake.nix
benchmark/: CMakeLists.txt  benchmark_upsample_fourier.py
cmake/: AOTICompile.cmake  AddAlgorithmLibrary.cmake  AddCppTestCase.cmake  AddPythonTestCase.cmake  AddTorchKernelLibrary.cmake  Doxyfile.in
doc/: algo-export-aot-compile.md  benchmark-upsample-fourier.md  benchmark.md  custom-kernel-torch-aot.md
inc/: ndarray.hpp
inc/algorithm/: upsample.hpp  upsample_2d_fourier.hpp  upsample_2d_fourier_kernel.hpp  upsample_pt2.hpp
inc/algorithm/detail/: aoti_metadata_resolver.hpp  upsample_aoti_runtime.hpp
inc/container/: ndarray.hpp
python/: ndarray.py
python/algorithm/: export_upsample.py  export_upsample_pt2.py  upsample_2d_fourier.py  upsample_2d_fourier_kernel.py
python/ndarry/: __init__.py  op_names.py
python/ndarry/algorithm/: __init__.py  upsample_2d_fourier.py  upsample_2d_fourier_kernel.py
python/tests/: test_kernel_upsample_2d_fourier.py  test_ndarray_dlpack_bridge.py  test_upsample.py  test_upsample_2d_fourier.py  test_upsample_2d_fourier_kernel.py  test_upsample_pt2.py
src/: ndarray_float.cpp
src/algorithm/: upsample.cpp  upsample_2d_fourier.cpp  upsample_2d_fourier_kernel.cpp  upsample_pt2.cpp
src/container/: ndarray_float.cpp  ndarray_typed.cpp
src/kernel/: upsample_2d_fourier.cpp  upsample_2d_fourier_cpu.cpp
src/python/: py_ndarray.cpp
test/: CMakeLists.txt  ndarray_float.cpp
tests/: CMakeLists.txt
tests/algorithm/: upsample_2d_fourier_kernel_runtime.cpp  upsample_2d_fourier_parity_runtime.cpp  upsample_2d_fourier_runtime.cpp  upsample_2d_fourier_runtime_test_common.hpp  upsample_pt2_runtime.cpp  upsample_runtime.cpp
tests/demo/: dlpack_column_major.cpp
tests/ndarray/: ndarray_arithmetic.cpp  ndarray_typed.cpp  test_common.hpp
tests/python/: common.py  test_kernel_upsample_2d_fourier.py  test_ndarray_dlpack_bridge.py  test_upsample_2d_fourier.py  test_upsample_2d_fourier_kernel.py  test_upsample_2d_fourier_known_output.py  test_upsample_2d_fourier_plot.py  test_upsample_2d_fourier_runtime_checks.py  upsample_2d_fourier_test_base.py
tools/: aoti-compile.py
